--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^16.4.5",
     "draft-js": "^0.11.7",
     "firebase": "^10.12.2",
+    "lucide-react": "^0.475.0",
     "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
